# TQC

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  clippy.toml  deny.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/tqc-algorithms/src/: lib.rs  qpe.rs  shor.rs
crates/tqc-atlas/: Cargo.toml
crates/tqc-atlas/src/: lib.rs
crates/tqc-compiler/src/: lib.rs  qasm.rs  sk.rs
crates/tqc-conformance/: Cargo.toml
crates/tqc-conformance/src/: honesty.rs  lib.rs
crates/tqc-conformance/tests/: bdd.rs  honesty.rs  probes.rs
crates/tqc-core/: Cargo.toml
crates/tqc-core/src/: amplitude.rs  coxeter.rs  generators.rs  inner.rs  labels.rs  lib.rs  modular.rs  octonion.rs  params.rs  spectrum.rs
crates/tqc-model/: Cargo.toml
crates/tqc-model/src/: lib.rs
crates/tqc-mtc/: Cargo.toml
crates/tqc-mtc/src/: lib.rs  native.rs  verifier.rs
crates/tqc-substrate/: Cargo.toml
crates/tqc-substrate/src/: holo.rs  holo_test.rs  lib.rs  test_import.rs
crates/tqc-vv/: Cargo.toml
crates/tqc-vv/src/: exact.rs  lib.rs  oracle.rs  witness.rs
crates/tqc-vv/tests/: exact_density.rs  run_sk.rs
docs/architecture/: ARCHITECTURE.md
docs/conceptual-model/: 00-source.md  01-topological-advantage.md  03-status-discipline.md
docs/paper/: generate_html.sh  main.tex
docs/paper/sections/: 01_introduction.tex  02_topological_base.tex  03_mathematical_resolution.tex  04_universal_computation.tex  05_algorithmic_rollups.tex  05_topological_advantage.tex  06_topological_advantage.tex  06_verification_architecture.tex  07_conclusion.tex  07_verification_architecture.tex  08_conclusion.tex
features/suites/s0_labels/: complex_amplitude_encoding.feature  label_space_belt.feature  objects_labels.feature
features/suites/s1_generators/: coxeter_weyl.feature  inner_product.feature  modular_identities.feature  reflection_generators.feature  spectrum.feature
features/suites/s2_mtc/: atlas_native_mtc.feature  braiding_r_matrix.feature  mac_lane_coherence.feature  modular_s_t.feature
features/suites/s3_measurement/: ground_space_protection.feature  holospace_cycle.feature
features/suites/s4_equivalency/: advantage.feature  archimedean_continuity.feature  complexity_bound.feature  fault_tolerance.feature  finite_closure.feature  grover_search.feature  qft_algorithm.feature  qpe_algorithm.feature  reconstructability.feature  s4_modal_logic.feature  shor_algorithm.feature  solovay_kitaev.feature  two_qubit_universality.feature  universality.feature  whitepaper_formatting.feature
features/targets/s0_labels/: complex_amplitude_encoding.feature  definite_anchor_e8.feature
features/targets/s1_generators/: categorical_structure.feature  dual_f4.feature  fusion_g2.feature
features/targets/s2_mtc/: atlas_native_mtc.feature  braiding_r_matrix.feature  modular_s_t.feature
features/targets/s3_measurement/: ground_space_protection.feature
features/targets/s4_equivalency/: solovay_kitaev.feature
features/targets/s4_open/: advantage.feature  universality.feature
model/: dictionary.toml  oracles.toml  status.toml  usecases.toml
oracles/: PROVENANCE.md
oracles/f1/: atlas-constants.json
xtask/: Cargo.toml
xtask/src/: main.rs
