[package]
name = "tqc-atlas"
description = "The UOR Atlas use-case instance over the parametric core, plus the use-case registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-core = { workspace = true }
tqc-model = { workspace = true }

[lints]
workspace = true
