[package]
name = "tqc-core"
description = "The parametric MTC framework (DRY core): generic over a use-case; no Atlas literals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# No dependencies: pure `core` + `alloc`, so the framework is no_std and portable
# (wasm32 / thumbv7em), matching the holospaces substrate's posture.
[dependencies]

[lints]
workspace = true
