[package]
name = "tqc-mtc"
description = "The MTC builds: modular S/T and braiding R, constructed and validated against the MTC axioms."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tqc-core = { workspace = true }

[lints]
workspace = true
